Added initial support for ATOM Bios.
Load ATOM Bios, verify its data and obtain the data tables
for futher use.
NOTE: atombios.h has not yet been included as its license
status is still undetermined.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,8 +7,10 @@ radeonhd_drv_la_SOURCES = \
          rhd_driver.c \
 	 rhd_cursor.c \
 	 rhd_helper.c \
+	 rhd_atombios.c \
          rhd.h \
 	 rhd_regs.h \
 	 rhd_macros.h \
-	 rhd_cursor.h
+	 rhd_cursor.h \
+	 rhd_atombios.h
 	
