Initial split out of outputs.
DACs A and B.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,13 +4,16 @@ radeonhd_drv_la_LDFLAGS = -module -avoid-version
 radeonhd_drv_ladir = @moduledir@/drivers
 
 radeonhd_drv_la_SOURCES = \
-         rhd_driver.c \
-	 rhd_cursor.c \
-	 rhd_helper.c \
-	 rhd_atombios.c \
-	 rhd_id.c \
-         rhd.h \
-	 rhd_regs.h \
-	 rhd_cursor.h \
-	 rhd_atombios.h
+	rhd_atombios.c \
+	rhd_cursor.c \
+	rhd_dac.c \
+	rhd_driver.c \
+	rhd_helper.c \
+	rhd_id.c \
+	rhd_output.c \
+	rhd.h \
+	rhd_atombios.h
+	rhd_cursor.h \
+	rhd_output.h \
+	rhd_regs.h
 	
