--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,9 +11,11 @@ radeonhd_drv_la_SOURCES = \
 	rhd_helper.c \
 	rhd_id.c \
 	rhd_output.c \
+	rhd_pll.c \
 	rhd.h \
 	rhd_atombios.h
 	rhd_cursor.h \
 	rhd_output.h \
+	rhd_pll.h \
 	rhd_regs.h
 	
