--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,7 @@ radeonhd_drv_ladir = @moduledir@/drivers
 
 radeonhd_drv_la_SOURCES = \
 	rhd_atombios.c \
+	rhd_crtc.c \
 	rhd_cursor.c \
 	rhd_dac.c \
 	rhd_driver.c \
@@ -16,7 +17,8 @@ radeonhd_drv_la_SOURCES = \
 	rhd_tmds.c \
 	rhd_vga.c \
 	rhd.h \
-	rhd_atombios.h
+	rhd_atombios.h \
+	rhd_crtc.h \
 	rhd_cursor.h \
 	rhd_hpd.h \
 	rhd_output.h \
