Add local copy of xf86CVTMode.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,6 +12,7 @@ radeonhd_drv_la_SOURCES = \
 	rhd_helper.c \
 	rhd_hpd.c \
 	rhd_id.c \
+	rhd_modes.c \
 	rhd_output.c \
 	rhd_pll.c \
 	rhd_tmds.c \
@@ -21,8 +22,9 @@ radeonhd_drv_la_SOURCES = \
 	rhd_crtc.h \
 	rhd_cursor.h \
 	rhd_hpd.h \
+	rhd_modes.h \
 	rhd_output.h \
 	rhd_pll.h \
 	rhd_regs.h \
 	rhd_vga.h
-	
+
