Initial version of I2C handling code for R5xx and R6xx.
R6xx I2C support should be pretty complete.
R5xx I2C support suffers from the lack of documentation.
Currently we don't have full specs for R5xx
therefore the code there is very preliminary.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ radeonhd_drv_la_LDFLAGS = -module -avoid-version
 radeonhd_drv_ladir = @moduledir@/drivers
 
 radeonhd_drv_la_SOURCES = \
-	rhd_atombios.c \
+	rhd_i2c.c \
 	rhd_crtc.c \
 	rhd_connector.c \
 	rhd_cursor.c \
@@ -19,7 +19,7 @@ radeonhd_drv_la_SOURCES = \
 	rhd_tmds.c \
 	rhd_vga.c \
 	rhd.h \
-	rhd_atombios.h \
+	rhd_i2c.h \
 	rhd_crtc.h \
 	rhd_connector.h \
 	rhd_cursor.h \
