Added support for AMD GPG profided AtomBIOS command table parser.
Some adjustmends have been made to the AtomBIOS data
table parser to accomodate the command table parser better.
The files itself are not yet integrated as the license has
not been fixed yet.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ radeonhd_drv_la_LDFLAGS = -module -avoid-version
 radeonhd_drv_ladir = @moduledir@/drivers
 
 radeonhd_drv_la_SOURCES = \
+	rhd_atombios.c \
 	rhd_i2c.c \
 	rhd_crtc.c \
 	rhd_connector.c \
@@ -20,6 +21,7 @@ radeonhd_drv_la_SOURCES = \
 	rhd_vga.c \
 	rhd.h \
 	rhd_i2c.h \
+	rhd_atombios.h \
 	rhd_crtc.h \
 	rhd_connector.h \
 	rhd_cursor.h \
@@ -28,5 +30,29 @@ radeonhd_drv_la_SOURCES = \
 	rhd_output.h \
 	rhd_pll.h \
 	rhd_regs.h \
-	rhd_vga.h
+	rhd_vga.h \
+	rhd_atomwrapper.h
 
+noinst_LTLIBRARIES = libatom.la
+libatom_la_CFLAGS = $(AM_CFLAGS) -DDRIVER_PARSER -DDISABLE_EASF -DENABLE_ALL_SERVICE_FUNCTIONS
+# libatom_la_LDFLAGS = -module -avoid-version
+
+libatom_la_SOURCES = \
+	rhd_atomwrapper.c \
+	rhd_atomwrapper.h \
+	AtomBios/CD_Operations.c \
+	AtomBios/Decoder.c \
+	AtomBios/hwserv_drv.c \
+	AtomBios/include/atombios.h \
+	AtomBios/include/CD_binding.h \
+	AtomBios/include/CD_Common_Types.h \
+	AtomBios/include/CD_Definitions.h \
+	AtomBios/include/CD_hw_services.h \
+	AtomBios/include/CD_Opcodes.h \
+	AtomBios/include/CD_Structs.h \
+	AtomBios/include/Decoder.h \
+	AtomBios/include/regsdef.h
+
+INCLUDES = -I./AtomBios/includes
+
+radeonhd_drv_la_LIBADD = libatom.la
