Fix the build of rhdI2CProbeAddress.
Also fix building against older modular X servers.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+compile
 config.guess
 config.h
 config.h.in
@@ -20,5 +21,3 @@ missing
 src/.deps
 src/.libs
 stamp-h1
-src/atombios.h
-*.orig
