Alter mode validation to properly catch fixed modes.
And get in a saner usage for the configured monitor.

--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,14 @@ if test "x$MONREC_HAS_REDUCED" = xyes; then
         AC_DEFINE(MONREC_HAS_REDUCED, 1, [MonRec has member reducedblanking])
 fi
 
+# Check wether MonRec has a maxPixClock member.
+AC_CHECK_MEMBER([MonRec.maxPixClock],
+         [MONREC_HAS_BANDWIDTH=yes], [MONREC_HAS_BANDWIDTH=no],
+         [#include "${sdkdir}/xf86.h"])
+if test "x$MONREC_HAS_BANDWIDTH" = xyes; then
+        AC_DEFINE(MONREC_HAS_BANDWIDTH, 1, [MonRec has member maxPixClock])
+fi
+
 AC_ARG_ENABLE(atombios, AC_HELP_STRING([--disable-atombios],
                                   [Disable AtomBIOS support [[default=no]]]),
               [do_atombios="$enableval"],
