--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,7 @@ sdkdir=$(pkg-config --variable=sdkdir xorg-server)
 # Header files checks.
 AC_HEADER_STDC
 
-# Check wether MonRec has a reducedblanking member.
+# Check whether MonRec has a reducedblanking member.
 AC_CHECK_MEMBER([MonRec.reducedblanking],
          [MONREC_HAS_REDUCED=yes], [MONREC_HAS_REDUCED=no],
          [#include "${sdkdir}/xf86.h"])
@@ -55,7 +55,7 @@ if test "x$MONREC_HAS_REDUCED" = xyes; then
         AC_DEFINE(MONREC_HAS_REDUCED, 1, [MonRec has member reducedblanking])
 fi
 
-# Check wether MonRec has a maxPixClock member.
+# Check whether MonRec has a maxPixClock member.
 AC_CHECK_MEMBER([MonRec.maxPixClock],
          [MONREC_HAS_BANDWIDTH=yes], [MONREC_HAS_BANDWIDTH=no],
          [#include "${sdkdir}/xf86.h"])
