Adding AtomBIOS support to conntest.
Engine and XTAL frequencies are kept in AtomBIOS tables.
These values are required to calculate DDC clocks correctly.
This patch also fixes a typo which caused all DDC lines
on R6xx to report a connected DDC slave.

--- a/utils/conntest/Makefile
+++ b/utils/conntest/Makefile
@@ -1,5 +1,5 @@
 rhd_conntest: rhd_conntest.c
-	gcc -Wall -o rhd_conntest rhd_conntest.c -lpci -lz
+	gcc -Wall -o rhd_conntest rhd_conntest.c -lpci -lz -I../../src/AtomBios/includes
 
 all: rhd_conntest
 
