Make sure that config.h is included in every file that includes rhd.h.
rhd.h contains structures that are different wether
libpciaccess is used or not.
Therefore we need to include config.h before rhd.h.
To avoid double inclusions of headers we don't include
it in rhd.h itself but check there if the define for
it is set. If not we simply error on build.

--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,10 @@ if test "x$GCC" = "xyes"; then
         CFLAGS="$CFLAGS -Wall -pedantic"
 fi
 
-AH_TOP([#include "xorg-server.h"])
+AH_TOP([#ifndef _CONFIG_H])
+AH_TOP([# define _CONFIG_H])
+AH_TOP([# include "xorg-server.h"])
+AH_BOTTOM([#endif])
 
 AC_ARG_WITH(xorg-module-dir,
             AC_HELP_STRING([--with-xorg-module-dir=DIR],
