Add man page describing the most frequently encountered problems.
Also extend README to describe how to build and install the driver.

--- a/configure.ac
+++ b/configure.ac
@@ -167,8 +167,8 @@ AC_SUBST([moduledir])
 DRIVER_NAME=radeonhd
 AC_SUBST([DRIVER_NAME])
 
-dnl XORG_MANPAGE_SECTIONS
-m4_pattern_forbid([XORG_RELEASE_VERSION])dnl
+dnl m4_pattern_forbid([XORG_RELEASE_VERSION])dnl
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 dnl These are also defined in XORG_RELEASE_VERSION since 2006-11-30.
@@ -188,5 +188,6 @@ fi
 
 AC_OUTPUT([
 	Makefile
+	man/Makefile
 	src/Makefile
 ])
