Automatically update man page from rhd_id.c
In a normal build in src/ ("make", "make all"), ensure that the
man page (man/radeonhd.man) is consistent with rhd_id.c.

If this has required changing man/radeonhd.man, display an error
message and abort the current build to notify the developer that
he needs to add man/radeonhd.man to his next commit.

The next build will always succeed unconditionally.

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,8 @@
 # OTHER DEALINGS IN THE SOFTWARE.
 
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = man src utils/conntest
+# src before man: src/ may update sources in man/
+SUBDIRS = src man utils/conntest
 
 EXTRA_DIST = RadeonHD.tmpl Imakefile git_version.sh ChangeLog
 MAINTAINERCLEANFILES = ChangeLog
