--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -31,7 +31,7 @@ driverman_PRE = @DRIVER_NAME@.man
 
 driverman_DATA = $(driverman_PRE:man=@DRIVER_MAN_SUFFIX@)
 
-EXTRA_DIST = @DRIVER_NAME@.man
+EXTRA_DIST = @DRIVER_NAME@.man Imakefile
 
 CLEANFILES = $(driverman_DATA)
 
