Log git commit if source tree is git checkout
Defines a number of CPP macros with a git commit version message
if source tree is git checkout.

Both radeonhd_drv.so and rhd_conntest print that version message.

Numerous adaptations to git_version.sh and build rules:
  * only touch git_version.h if content needs to change
  * always define useful GIT_MESSAGE
  * add example program using git_version.h
  * handle srcdir != builddir
  * variable header name and ifndef

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,7 @@
+BUILT_SOURCES =
+CLEANFILES =
+include $(top_srcdir)/RadeonHD.am
+
 EXTRA_DIST = Imakefile
 
 AM_CFLAGS = @XORG_CFLAGS@ @WARN_CFLAGS@
@@ -41,6 +45,9 @@ radeonhd_drv_la_SOURCES = \
 	rhd_regs.h \
 	rhd_vga.h \
 	rhd_shadow.h
+
+nodist_radeonhd_drv_la_SOURCES = \
+	git_version.h
 
 if ATOM_BIOS
 radeonhd_drv_la_SOURCES += \
