Have conntest build require pci/pci.h and -lz
If either of those is not found, rhd_conntest is not built.

Affects automake builds only.

--- a/utils/conntest/Makefile.am
+++ b/utils/conntest/Makefile.am
@@ -4,7 +4,12 @@ include $(top_srcdir)/RadeonHD.am
 
 EXTRA_DIST = README Imakefile
 
+EXTRA_PROGRAMS = rhd_conntest
+if HAVE_PCI_PCI_H
+if HAVE_ZLIB
 noinst_PROGRAMS = rhd_conntest
+endif
+endif
 
 # Including config.h requires xorg-config.h, so we need the XORG_CFLAGS here
 AM_CFLAGS   = @XORG_CFLAGS@ @WARN_CFLAGS@
