--- a/RadeonHD.am
+++ b/RadeonHD.am
@@ -7,7 +7,13 @@ BUILT_SOURCES += git_version.stamp
 CLEANFILES += git_version.h
 GIT_VERSION_CMD = $(SHELL) $(top_srcdir)/git_version.sh
 git_version.stamp:
-	env GIT_DIR="$(top_srcdir)/.git" $(GIT_VERSION_CMD) -s $(top_srcdir) -o git_version.h
+	@if test -f "$(srcdir)/git_version.h"; then \
+		if test -f "git_version.h"; then :; \
+		else \
+			cp "$(srcdir)/git_version.h" "git_version.h"; \
+		fi; \
+	fi
+	env GIT_DIR="$(top_srcdir)/.git" $(GIT_VERSION_CMD) -k -s $(top_srcdir) -o git_version.h
 	@if test -s "$(srcdir)/git_version.h"; then \
 		if cmp "$(srcdir)/git_version.h" "git_version.h"; then :; \
 		else \
@@ -15,4 +21,10 @@ git_version.stamp:
 			echo "       You probably want to remove the former."; \
 			exit 1; \
 		fi; \
+	fi
+
+dist-hook: git_version.stamp
+	if test -f "git_version.h"; then \
+		$(SED) -e 's|^#undef GIT_IS_DIST.*|#define GIT_IS_DIST 1|' \
+			"git_version.h" > "$(distdir)/git_version.h"; \
 	fi
