--- a/configure.ac
+++ b/configure.ac
@@ -48,12 +48,21 @@ sdkdir=$(pkg-config --variable=sdkdir xorg-server)
 # Header files checks.
 AC_HEADER_STDC
 
+PKG_CHECK_MODULES(PCIUTILS, libpci,,
+                  [AC_MSG_WARN([libpci not registered in pkgconfig])])
+
+SAVED_CPPFLAGS="$CPPFLAGS"
+SAVED_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS $PCIUTILS_CFLAGS"
+CPPFLAGS="$CPPFLAGS $PCIUTILS_CFLAGS"
 AC_CHECK_HEADER([pci/pci.h],
                 [AC_DEFINE([HAVE_PCI_PCI_H], [1],
                            [Define to 1 if you have <pci/pci.h>.])
                  have_pci_pci_h=yes],
                 [AC_MSG_WARN([Caution: Will not compile rhd_conntest without pciutils headers.])])
 AM_CONDITIONAL([HAVE_PCI_PCI_H], [test "x$have_pci_pci_h" = "xyes"])
+CFLAGS="$SAVED_CFLAGS"
+CPPFLAGS="$SAVED_CPPFLAGS"
 
 SAVED_CFLAGS="$CFLAGS"
 CFLAGS="$CFLAGS $XORG_CFLAGS"
@@ -180,6 +189,8 @@ esac
 
 # Substitute
 
+AC_SUBST([PCIUTILS_CFLAGS])
+AC_SUBST([PCIUTILS_LIBS])
 AC_SUBST([XORG_CFLAGS])
 AC_SUBST([WARN_CFLAGS])
 AC_SUBST([PEDANTIC_CFLAGS])
