Make the driver build with the latest ustream git server sources again.
The driver stopped building due to the removal of xf86_ansic.h and
xf86_libc.h in the latest upstream sources.
This patch consolidates the heterogenious handling of system functions in
this driver. The system function wrappers remain fully supported for older
server versions.

--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,12 @@ AM_CONDITIONAL([HAVE_PCI_PCI_H], [test "x$have_pci_pci_h" = "xyes"])
 CFLAGS="$SAVED_CFLAGS"
 CPPFLAGS="$SAVED_CPPFLAGS"
 
+AC_CHECK_HEADER([${sdkdir}/xf86_ansic.h],
+		[AC_DEFINE([HAVE_XF86_ANSIC_H], [1],
+			   [Define to 1 if you have <${sdkdir}/xf86_ansic.h>.])
+		have_xf86_ansic_h=yes])
+AM_CONDITIONAL([HAVE_XF86_ANSIC_H], [test "x$have_xf86_ansic_h" = "xyes"])
+
 SAVED_CFLAGS="$CFLAGS"
 CFLAGS="$CFLAGS $XORG_CFLAGS"
 
