R5xx: Implement EXA.
MMIO only, so no accelerated up/download yet.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -57,6 +57,10 @@ radeonhd_drv_la_SOURCES = \
 nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
 
+if USE_EXA
+radeonhd_drv_la_SOURCES += r5xx_exa.c
+endif
+
 if ATOM_BIOS
 radeonhd_drv_la_SOURCES += \
 	AtomBios/includes/atombios.h
