--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,7 @@ radeonhd_drv_la_SOURCES = \
 	rhd_shadow.c \
 	rhd_randr.c \
 	rhd_dig.c \
+	rhd_ddia.c \
 	rhd_atombios.h \
 	rhd.h \
 	rhd_i2c.h \
