Add AtomBIOS SetPixelClock support.
This is code to hook into the AtomBIOS PLL callbacks to set
the pixel clock using AtomBIOS.
This just provides the code, it's not hooked up, yet.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,6 +37,7 @@ radeonhd_drv_la_SOURCES = \
 	rhd_dig.c \
 	rhd_ddia.c \
 	rhd_atomout.c \
+	rhd_atompll.c \
 	rhd_biosscratch.c \
 	rhd_atombios.h \
 	rhd.h \
