Disable unnecessary libtool CXX and F77 checks
Also, check for CC before doing the libtool checks.

--- a/configure.ac
+++ b/configure.ac
@@ -16,8 +16,10 @@ AM_MAINTAINER_MODE
 
 # Program checks.
 AC_DISABLE_STATIC
-AC_PROG_LIBTOOL
 AC_PROG_CC
+CXX=no
+F77=no
+AC_PROG_LIBTOOL
 
 
 AH_TOP([#ifndef _CONFIG_H])
