--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -53,16 +53,14 @@ radeonhd_drv_la_SOURCES = \
 	rhd_vga.h \
 	rhd_shadow.h \
 	rhd_mc.h \
-	r5xx_accel.c \
-	r5xx_accel.h \
-	r5xx_xaa.c \
-	r5xx_regs.h
+	radeon_accel.c \
+	radeon_reg.h
 
 nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
 
 if USE_EXA
-radeonhd_drv_la_SOURCES += r5xx_exa.c
+radeonhd_drv_la_SOURCES += radeon_exa.c
 endif
 
 if USE_DRI
