CS: Introduce Command Submission infrastructure for R5xx MMIO.
R5xx acceleration can now use the command submission infrastructure over
MMIO. This new infrastructure will provide both DRM CP and Direct CP
implementations soon.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -53,6 +53,8 @@ radeonhd_drv_la_SOURCES = \
 	rhd_vga.h \
 	rhd_shadow.h \
 	rhd_mc.h \
+	rhd_cs.c \
+	rhd_cs.h \
 	r5xx_accel.c \
 	r5xx_accel.h \
 	r5xx_xaa.c \
