CS: Add setup for the 3D engine.
This sets up the engine for EXA and Textured Video, ported from the tip
of the quick_and_dirty_2d branch.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,7 +58,9 @@ radeonhd_drv_la_SOURCES = \
 	r5xx_accel.c \
 	r5xx_accel.h \
 	r5xx_xaa.c \
-	r5xx_regs.h
+	r5xx_regs.h \
+	r5xx_3dregs.h \
+	radeon_3d.c
 
 nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
