CS: Add EXA Composite/Render acceleration.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -66,7 +66,7 @@ nodist_radeonhd_drv_la_SOURCES = \
 	git_version.h
 
 if USE_EXA
-radeonhd_drv_la_SOURCES += r5xx_exa.c
+radeonhd_drv_la_SOURCES += r5xx_exa.c radeon_exa_render.c
 endif
 
 if USE_DRI
